--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,10 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+upload_port = /dev/cu.SLAB_USBtoUART
+monitor_port = /dev/cu.SLAB_USBtoUART
+monitor_speed = 115200
+
+lib_deps = 
+  Google Cloud IoT Core JWT@1.1.10
