confirm connection but shuold fix index.ts on GCP

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,4 +19,7 @@ monitor_speed = 115200
 
 lib_deps = 
   Google Cloud IoT Core JWT@1.1.10
-  MQTT@2.4.7
+  Adafruit BME280 Library@2.0.2
+
+; lib
+; https://github.com/256dpi/arduino-mqtt
