--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ monitor_speed = 115200
 lib_deps = 
   Google Cloud IoT Core JWT@1.1.10
   Adafruit BME280 Library@2.0.2
+  ArduinoJson@6.15.2
 
 ; lib
 ; https://github.com/256dpi/arduino-mqtt
